<resources>
    <string name="app_name">Google Maps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Mi_casa">Mi casa</string>

    <string name="terreno">Terreno</string>
    <string name="hibrido">Hibrido</string>
    <string name="satelite">Satelite</string>
    <string name="normal">Normal</string>
    <string name="none">None</string>


</resources>
