<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_settings"
        android:title="@string/terreno"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings2"
        android:title="@string/hibrido"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings3" android:title="@string/satelite"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings4" android:title="@string/normal"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings5" android:title="@string/none"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
